@@ -1,0 +1,41 @@
+// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.Facilities.Metadata
+{
+	using System;
+	using System.Linq;
+	using System.Reflection;
+
+	using Castle.DynamicProxy;
+
+	public class MetaComponentInterceptorSelector : IInterceptorSelector
+	{
+		public IInterceptor[] SelectInterceptors(Type type, MethodInfo method, IInterceptor[] interceptors)
+		{
+			if ("get_Data".Equals(method.Name))
+			{
+				var selected = interceptors.Where(i => (i is MetadataItemInterceptor) == false).ToArray();
+				return selected;
+			}
+			if ("get_Item".Equals(method.Name))
+			{
+				var selected = interceptors.Where(i => (i is MetadataDataInterceptor) == false).ToArray();
+				return selected;
+			}
+
+			throw new ArgumentException("Not supported method: " + method);
+		}
+	}
+}
